# aneurysm-stent-sym

./: .gitignore  LICENSE  PyStenting.py  README.md  REFACTOR_PLAN.md  Utils.py  appSettingsMaster.json  cleanSym.cmd  constructAneuGeom.py  constructInitFD.py  deployStent.py  mergeMesh.py  pyproject.toml  requirements.txt  run.py  runSym.cmd
.github/workflows/: ci.yml
doc/: geometry-construction.ipynb
experiment/experiment 0/: ReadMe.md  appSettings.json  config.json  config.yaml
experiment/experiment 1/: ReadMe.md  appSettings.json  config.json  config.yaml
script/: constructAneuGeom.bat  constructInitFD.bat  deployStent.bat  mergeMesh.bat
scripts/: run.ps1  run.sh
src/stenting/: __init__.py  centerline.py  cli.py  config.py  io.py  pipeline.py  simulation.py
src/stenting/geometry/: __init__.py  aneurysm.py  boundaries.py  cylinder.py  transforms.py
src/stenting/stent/: __init__.py  flow_diverter.py  patterns.py  render.py
tests/: conftest.py  test_boundaries.py  test_golden.py  test_patterns.py  test_smoke.py  test_transforms.py
